# xq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  cross_compile.yml
examples/: covid.rs  data.json  demo.rs  dialect.rs
src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs  main.rs
