[package]
name = "xq"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
tracing = "0.1.37"
sqlparser = "0.33.0"
tokio = { version = "1.27.0", features = ["full"] }
polars = { version = "0.30.0", features = ["lazy", "bigidx"] }
reqwest = { version = "0.11.16", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tracing-subscriber = "0.3.16"
