[package]
name = "xq"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.27" }
anyhow = "1.0.86"
async-trait = "0.1.81"
tracing = "0.1.40"
sqlparser = "0.33.0"
tokio = { version = "1.39.2", features = ["full"] }
polars = { version = "0.50", features = ["lazy", "json", "csv"] }
prettytable-rs = "0.10.0"
serde_json = "1.0"
[dev-dependencies]
tracing-subscriber = "0.3.18"
